--- a/input.conf
+++ b/input.conf
@@ -44,16 +44,16 @@ ALT+LEFT   playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
 META+RIGHT playlist-next ; show-text "${playlist-pos-1}/${playlist-count}"
 META+LEFT  playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
 
-ALT+UP    script-message osc-playlist
-ALT+DOWN  script-message osc-playlist
+ALT+UP     script-message osc-playlist
+ALT+DOWN   script-message osc-playlist
 
-PGUP  osd-msg-bar seek +600 relative+keyframes
-PGDWN osd-msg-bar seek -600 relative+keyframes
+PGUP       osd-msg-bar seek +600 relative+keyframes
+PGDWN      osd-msg-bar seek -600 relative+keyframes
 
 
 
-# [`] [1] [2] [3] [4] [5] [6] [7] [8] [9] [0]
-# [~] [!] [@]  #   $   %   ^   &   *  [(] [)]
+# ` [1] [2] [3] [4] [5] [6] [7] [8] [9] [0]
+# ~ [!] [@]  #   $   %   ^   &   *   (   )
 
 1      add contrast -1 ; show-text "Contrast: ${contrast}"
 2      add contrast +1 ; show-text "Contrast: ${contrast}"
@@ -65,12 +65,8 @@ PGDWN osd-msg-bar seek -600 relative+keyframes
 8      add saturation +1 ; show-text "Saturation: ${saturation}"
 
 9      add volume -2 ; show-text "Volume: ${volume}"
-(      add balance -0.1 ; show-text "Audio Balance (pan): ${balance}"  # adjust audio balance in favor of left
 0      add volume +2 ; show-text "Volume: ${volume}"
-)      add balance +0.1 ; show-text "Audio Balance (pan): ${balance}"  #                                 right
 
-`      script-binding progressbar/toggle-inactive-bar
-~      script-binding repl/repl-enable
 !      cycle ontop
 @      cycle-values vf "format=colorlevels=full" "format=colorlevels=auto" "format=colorlevels=limited"
 
@@ -81,10 +77,10 @@ $      ignore
 &      ignore
 *      ignore
 
-ALT+1 cycle-values opengl-shaders "~/.mpv/shaders/nnedi3-nns32-win8x4.hook" ""
-ALT+2 cycle-values opengl-shaders "~/.mpv/shaders/FineSharp.glsl" ""
-ALT+3 cycle-values opengl-shaders "~/.mpv/shaders/SSimSuperRes.glsl" ""
-ALT+4 cycle-values opengl-shaders "~/.mpv/shaders/SSimDownscaler.glsl" ""
+ALT+1 cycle-values glsl-shaders "~/.mpv/shaders/nnedi3-nns32-win8x4.hook" ""
+ALT+2 cycle-values glsl-shaders "~/.mpv/shaders/FineSharp.glsl" ""
+ALT+3 cycle-values glsl-shaders "~/.mpv/shaders/SSimSuperRes.glsl" ""
+ALT+4 cycle-values glsl-shaders "~/.mpv/shaders/SSimDownscaler.glsl" ""
 
 
 
@@ -139,18 +135,19 @@ CTRL+d cycle video
 
 f      cycle fullscreen ; show-text "Scale: ${window-scale}"
 F      vf clr "" ; show-text "Filters cleared"
-g      cycle-values stretch-image-subs-to-screen "yes" "no"
-G      cycle-values stretch-dvd-subs "yes" "no"
 
-h      cycle-values video-sync display-resample audio ; cycle-values interpolation yes no ; show-text "Interpolation: ${interpolation} (${tscale})"
-H      cycle-values tscale "linear" "catmull_rom" "mitchell" "bicubic" "oversample" ; show-text "Interpolation: ${interpolation} (${tscale})"
-CTRL+h cycle-values interpolation no yes ; show-text "Interpolation: ${interpolation} (${tscale})"
-ALT+h  vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.py:2
+g      cycle-values video-sync display-resample audio ; cycle-values interpolation yes no ; show-text "Interpolation: ${interpolation} (${tscale})"
+G      cycle-values tscale "linear" "catmull_rom" "mitchell" "bicubic" "oversample" ; show-text "Interpolation: ${interpolation} (${tscale})"
+CTRL+g cycle-values interpolation no yes ; show-text "Interpolation: ${interpolation} (${tscale})"
+ALT+g  vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.py:2
 
-j      cycle deinterlace
-J      script-binding autodeint
-k      vf toggle vapoursynth=~~/vs-scripts/decimate.py  # fix 24FPS videos encoded at 30FPS
-K      cycle deband
+h      cycle deinterlace
+H      script-binding autodeint
+j      cycle deband
+J      vf toggle vapoursynth=~~/vs-scripts/decimate.py  # fix 24FPS videos encoded at 30FPS
+
+k      cycle-values stretch-image-subs-to-screen "yes" "no"
+K      cycle-values stretch-dvd-subs "yes" "no"
 #k      vf toggle "lavfi=[hqdn3d=2.0]"       # denoise
 #K      vf toggle "lavfi=[unsharp]"          # sharpen
 
@@ -160,8 +157,8 @@ CTRL+l ab-loop
 
 
 
-# [z] [x] [c] [v] [b] [n] [m] [,] [.]
-# [Z]  X   C   V  [B] [N] [M] [<] [>]
+# [z] [x] [c] [v] [b] [n] [m] [,] [.] [/]
+# [Z]  X   C   V  [B] [N] [M] [<] [>] [?]
 
 z      osd-msg-bar add chapter +1 ; show-text "${?chapter:Chapter: ${chapter}}"
 Z      osd-msg-bar add chapter -1 ; show-text "${?chapter:Chapter: ${chapter}}"
@@ -194,13 +191,16 @@ CTRL+m set sub-delay 0
 CTRL+< osd-msg playlist-next ; show-text "${playlist-pos-1}/${playlist-count}"
 CTRL+> osd-msg playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
 
+/      script-binding progressbar/toggle-inactive-bar
+?      script-binding repl/repl-enable
+
 
 
 # [-] [=] [esc] [space] [BackSpace]
 # [_] [+] [tab] [enter]
 
--      add sub-scale +0.05                  # increase subtitle font size
-_      add sub-scale -0.05                  # decrease subtitle font size
+-      add sub-scale -0.05                  # decrease subtitle font size
+_      add sub-scale +0.05                  # increase subtitle font size
 =      add sub-pos -1                       # move subtitles up
 +      add sub-pos +1                       # move subtitles down
 
@@ -211,6 +211,9 @@ TAB               cycle mute
 ENTER             show-progress
 
 BS     set speed 1.0 ; set gamma 0 ; set brightness 0 ; set contrast 0 ; set saturation 0 ; set hue 0 ; show-text "Speed/Gamma/Brightness/Contrast/Saturation/Hue resetted"
+
+F1     script-binding progressbar/toggle-inactive-bar
+F2     script-binding repl/repl-enable
 
 
 
