--- a/mpv.conf
+++ b/mpv.conf
@@ -5,7 +5,10 @@
 # General #
 ###########
 
-#save-position-on-quit
+input-ipc-server=/tmp/mpvsocket         # listen for IPC on this socket
+load-stats-overlay=no                   # use local stats.lua
+#save-position-on-quit                  # handled by a script
+
 no-border                               # no window title bar
 msg-module                              # prepend module name to log messages
 msg-color                               # color log messages on terminal
@@ -28,7 +31,7 @@ hls-bitrate=max                         # use max quality for HLS streams
 
 [ytdl-desktop]
 profile-desc=cond:is_desktop()
-ytdl-format=bestvideo[height<=?1080][fps<=?30][protocol!=http_dash_segments]+bestaudio/best
+ytdl-format=bestvideo[height<=?1080]+bestaudio/best
 
 [ytdl-laptop]
 profile-desc=cond:is_laptop()
@@ -37,15 +40,17 @@ ytdl-format=bestvideo[height<=?1080][fps<=?30][vcodec!=?vp9][protocol!=http_dash
 [default]
 
 
-#########
+#########c
 # Cache #
 #########
 
+# Configure the cache to be really big (multiple GBs)
+# We have a lot of memory, so why not use it for something
+
 cache=yes
-cache-default=5000000                   # size in KB
-cache-backbuffer=25000                  # size in KB
-cache-initial=0                         # start playback when your cache is filled up with x kB
-cache-secs=10                           # how many seconds of audio/video to prefetch if the cache is active
+cache-default=4000000                   # size in KB
+cache-backbuffer=250000                 # size in KB
+demuxer-max-bytes=1147483647            # ~1 GiB in bytes
 
 
 #############
@@ -123,17 +128,19 @@ volume=100                              # default volume, 100 = unchanged
 # on_battery(), is_laptop() and is_dektop() are my own additional functions imported from scripts/auto-profiles-functions.lua
 
 # Defaults for all profiles
-vo=opengl
+#vo=gpu
+#gpu-api=opengl
 tscale=oversample                      # [sharp] oversample <-> linear (triangle) <-> catmull_rom <-> mitchell <-> gaussian <-> bicubic [smooth]
 opengl-early-flush=no
-opengl-pbo=yes
+opengl-pbo=no                          # "yes" is currently bugged: https://github.com/mpv-player/mpv/issues/4988
 sigmoid-slope=10
 
 
 [high-quality]
-profile-desc=cond:is_desktop() and get('width', math.huge) < 3840
+profile-desc=cond:is_desktop() and get('width', math.huge) < 3840 and (get('estimated-vf-fps', math.huge) < 58 or get('width', math.huge) < 900)
+# hanning with this radius is broken on OSX due to OpenGL driver bug
 #scale=ewa_hanning
-#scale-radius=3.2383154841662362 hanning with this radius is broken on OSX due to OpenGL driver bug
+#scale-radius=3.2383154841662362
 scale=ewa_lanczossharp
 cscale=ewa_lanczossoft
 dscale=mitchell
@@ -146,9 +153,9 @@ deband=yes
 hwdec=no
 
 [mid-quality]
-profile-desc=cond:(is_laptop() and not on_battery() and get('width', math.huge) < 1920) or (is_desktop() and get('width', math.huge) >= 3840)
+profile-desc=cond:(is_laptop() and (not on_battery() and get('width', math.huge) < 1920 and get('estimated-vf-fps', math.huge) < 58)) or (is_desktop() and (get('width', math.huge) >= 3840 or (get('estimated-vf-fps', math.huge) >= 58 and get('width', math.huge) >= 900)))
 scale=spline36
-cscale=bilinear
+cscale=spline36
 dscale=mitchell
 scale-antiring=1.0
 cscale-antiring=1.0
@@ -159,7 +166,7 @@ deband=yes
 hwdec=no
 
 [low-quality]
-profile-desc=cond:is_laptop() and (on_battery() or get('width', math.huge) >= 1920)
+profile-desc=cond:is_laptop() and (on_battery() or get('width', math.huge) >= 1920 or get('estimated-vf-fps', math.huge) >= 58)
 scale=bilinear
 cscale=bilinear
 dscale=bilinear
@@ -169,12 +176,7 @@ dither-depth=no
 correct-downscaling=no
 sigmoid-upscaling=no
 deband=no
-hwdec=auto
-
-[60FPS]
-profile-desc=cond:is_laptop() and get('container-fps', 0) >= 59
-scale=bilinear
-cscale=bilinear
+hwdec=no
 
 [4K]
 profile-desc=cond:get('width', -math.huge) >= 3840
@@ -192,15 +194,9 @@ vd-lavc-threads=0
 ###################################
 
 [protocol.https]
-#cache=yes
-#cache-default=500000                    # size in KB
-#cache-backbuffer=250000                 # size in KB
-cache-secs=100                           # how many seconds of audio/video to prefetch
-user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:47.0) Gecko/20100101 Firefox/47.0'
+cache=yes
+user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:57.0) Gecko/20100101 Firefox/58.0'
 
 [protocol.http]
-#cache=yes
-#cache-default=500000                    # size in KB
-#cache-backbuffer=250000                 # size in KB
-cache-secs=100                           # how many seconds of audio/video to prefetch
-user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:47.0) Gecko/20100101 Firefox/47.0'
+cache=yes
+user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:57.0) Gecko/20100101 Firefox/58.0'
