--- a/input.conf
+++ b/input.conf
@@ -1,10 +1,9 @@
 # vim: syntax=config
 
 
+# Mouse
 
-# mouse
-
-#MOUSE_BTN0     script-binding progressbar/seek-to-mouse
+MOUSE_BTN0     ignore
 MOUSE_BTN0_DBL cycle fullscreen
 MOUSE_BTN2     cycle pause
 MOUSE_BTN3     ignore
@@ -13,15 +12,8 @@ MOUSE_BTN5     ignore
 MOUSE_BTN6     ignore
 
 
-# trackpad
 
-AXIS_UP    ignore
-AXIS_DOWN  ignore
-AXIS_LEFT  ignore
-AXIS_RIGHT ignore
-
-
-# arrow keys
+# Arrow/navigation keys
 
 RIGHT       osd-msg-bar seek +5  relative+keyframes
 LEFT        osd-msg-bar seek -5  relative+keyframes
@@ -33,22 +25,34 @@ DOWN       osd-msg-bar seek -30  relative+keyframes
 SHIFT+UP   osd-msg-bar seek +120 relative+keyframes
 SHIFT+DOWN osd-msg-bar seek -120 relative+keyframes
 
-CTRL+RIGHT osd-msg-bar sub-seek +1
-CTRL+LEFT  osd-msg-bar sub-seek -1
-
-CTRL+UP    add cache-size +50000 ; show-text "Cache Size: ${cache-size}\n| Used: ${cache-used}\n| Free: ${cache-free}"
-CTRL+DOWN  add cache-size -50000 ; show-text "Cache Size: ${cache-size}\n| Used: ${cache-used}\n| Free: ${cache-free}"
-
-ALT+RIGHT  playlist-next ; show-text "${playlist-pos-1}/${playlist-count}"
-ALT+LEFT   playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
-META+RIGHT playlist-next ; show-text "${playlist-pos-1}/${playlist-count}"
-META+LEFT  playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
-
-ALT+UP     script-message osc-playlist
-ALT+DOWN   script-message osc-playlist
-
 PGUP       osd-msg-bar seek +600 relative+keyframes
 PGDWN      osd-msg-bar seek -600 relative+keyframes
+
+CTRL+RIGHT sub-seek +1 ; show-text "Sub Seek +1"
+CTRL+LEFT  sub-seek -1 ; show-text "Sub Seek -1"
+
+# Adjust timing so that next/prev subtitle is displayed now
+CTRL+UP    sub-step +1 ; show-text "Sub Step +1 (timing adjustment)"
+CTRL+DOWN  sub-step -1 ; show-text "Sub Step -1 (timing adjustment)"
+
+ALT+RIGHT  add video-pan-x -0.01
+ALT+LEFT   add video-pan-x +0.01
+ALT+UP     add video-pan-y +0.01
+ALT+DOWN   add video-pan-y -0.01
+
+META+RIGHT add video-zoom  +0.05
+META+LEFT  add video-zoom  -0.05
+META+UP    add video-zoom  +0.05
+META+DOWN  add video-zoom  -0.05
+
+
+
+# Trackpad
+
+AXIS_UP    ignore
+AXIS_DOWN  ignore
+AXIS_LEFT  ignore
+AXIS_RIGHT ignore
 
 
 
@@ -77,40 +81,45 @@ $      ignore
 &      ignore
 *      ignore
 
-ALT+1 cycle-values glsl-shaders "~/.mpv/shaders/nnedi3-nns32-win8x4.hook" ""
-ALT+2 cycle-values glsl-shaders "~/.mpv/shaders/FineSharp.glsl" ""
-ALT+3 cycle-values glsl-shaders "~/.mpv/shaders/SSimSuperRes.glsl" ""
-ALT+4 cycle-values glsl-shaders "~/.mpv/shaders/SSimDownscaler.glsl" ""
+CTRL+1 cycle-values glsl-shaders "~/.mpv/shaders/ravu-r3-rgb.hook" ""
+CTRL+2 cycle-values glsl-shaders "~/.mpv/shaders/nnedi3-nns32-win8x4.hook" ""
+CTRL+3 cycle-values glsl-shaders "~/.mpv/shaders/SSimSuperRes.glsl" ""
+CTRL+4 cycle-values glsl-shaders "~/.mpv/shaders/SSimDownscaler.glsl" ""
+CTRL+5 cycle-values glsl-shaders "~/.mpv/shaders/FineSharp.glsl" ""
+CTRL+6 cycle-values glsl-shaders "~/.mpv/shaders/adaptive-sharpen.glsl" ""
 
 
 
-# [q] [w] [e] [r] [t] [y] [u] [i] [o] [p]
-# [Q] [W] [E] [R] [T] [Y] [U] [I]  O  [P]
+# [q] [w] [e] [r] [t] y u [i] [o] [p] [ ]
+# [Q] [W] [E] [R] [T] Y U [I]  O  [P] { }
 
 Q      quit
 q      quit-watch-later
 
 w      script-message osc-playlist
-W      playlist-clear
-e      playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
-E      playlist-prev ; script-message osc-playlist
-r      playlist-next ; show-text "${playlist-pos-1}/${playlist-count}"
-R      playlist-next ; script-message osc-playlist
+W      playlist-shuffle
+e      playlist-next ; show-text "${playlist-pos-1}/${playlist-count}"
+E      playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
 
-t      cycle-values video-rotate 90 180 270 0
-T      ignore
+r      cycle-values sub-use-margins "yes" "no"
+R      cycle-values ass-force-margins "yes" "no"  # does not work with :blend-subtitles
+CTRL+r cycle-values blend-subtitles "yes" "video" "no"
 
-y      set ab-loop-a ${time-pos}
-Y      set ab-loop-a no
-u      set ab-loop-b ${time-pos}
-U      set ab-loop-b no
+t      cycle-values stretch-image-subs-to-screen "yes" "no"
+T      cycle-values stretch-dvd-subs "yes" "no"
 
-#i      script-binding stats/display-stats
-#I      script-binding stats/display-stats-toggle
+y      ignore
+Y      ignore
+
+u      ignore
+U      ignore
+
+i      script-binding stats/display-stats
+I      script-binding stats/display-stats-toggle
 o      cycle-values osd-level 3 1
 O      ignore
-p      run "/usr/local/bin/bash" "-c" "$HOME/Documents/Code/Haskell/hsbooru/crap/showfile-essential ${filename}"
-P      playlist-shuffle ; show-text "${playlist-pos-1}/${playlist-count}"
+p      cycle-values video-rotate 90 180 270 0
+P      cycle-values video-aspect "16:9" "4:3" "2.35:1" "-1"
 
 [     ignore
 ]     ignore
@@ -118,16 +127,16 @@ P      playlist-shuffle ; show-text "${playlist-pos-1}/${playlist-count}"
 }     ignore
 
 
+
 # [a] [s] [d] [f] [g] [h] [j] [k] [l]
 # [A] [S] [D] [F] [G] [H] [J] [K] [L]
 
-a      cycle audio                          # switch audio streams
-A      cycle-values af "lavfi=[dynaudnorm=f=200:g=5:r=0.1]" "acompressor" ""         # dynamic range compression
+a      cycle audio                                                     # switch audio streams
+A      cycle-values af "lavfi=[dynaudnorm=f=200:g=5:r=0.1]" ""         # dynamic range compression
 
-s      cycle sub                            # cycle through subtitles
+s      cycle sub                                                       # cycle through subtitles
 S      cycle sub-visibility
 CTRL+s cycle secondary-sid
-ALT+s  cycle-values ass-force-margins "yes" "no"  # does not work with :blend-subtitles
 
 d      cycle-values window-scale "1.5" "2.0" "0.5" "1.0" ; show-text "Scale: ${window-scale}"
 D      cycle edition
@@ -139,29 +148,28 @@ F      vf clr "" ; show-text "Filters cleared"
 g      cycle-values video-sync display-resample audio ; cycle-values interpolation yes no ; show-text "Interpolation: ${interpolation} (${tscale})"
 G      cycle-values tscale "linear" "catmull_rom" "mitchell" "bicubic" "oversample" ; show-text "Interpolation: ${interpolation} (${tscale})"
 CTRL+g cycle-values interpolation no yes ; show-text "Interpolation: ${interpolation} (${tscale})"
-ALT+g  vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.py:2
+ALT+g  vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.py:4
 
 h      cycle deinterlace
 H      script-binding autodeint
+
 j      cycle deband
-J      vf toggle vapoursynth=~~/vs-scripts/decimate.py  # fix 24FPS videos encoded at 30FPS
+J      vf toggle "lavfi=[hqdn3d=2.0]"
 
-k      cycle-values stretch-image-subs-to-screen "yes" "no"
-K      cycle-values stretch-dvd-subs "yes" "no"
-#k      vf toggle "lavfi=[hqdn3d=2.0]"       # denoise
-#K      vf toggle "lavfi=[unsharp]"          # sharpen
+k      vf toggle vapoursynth=~~/vs-scripts/decimate.py  # fix 24FPS videos encoded at 30FPS
+K      ignore
 
-l      cycle-values loop-playlist yes no ; show-text "${?=loop-playlist==inf:Looping enabled}${?=loop-playlist==no:Looping disabled}"
-L      cycle-values loop-file yes no ; show-text "${?=loop-file==yes:Looping enabled (file)}${?=loop-file==no:Looping disabled (file)}"
+l      cycle-values loop-file yes no ; show-text "${?=loop-file==yes:Looping enabled (file)}${?=loop-file==no:Looping disabled (file)}"
+L      cycle-values loop-playlist yes no ; show-text "${?=loop-playlist==inf:Looping enabled}${?=loop-playlist==no:Looping disabled}"
 CTRL+l ab-loop
 
 
 
-# [z] [x] [c] [v] [b] [n] [m] [,] [.] [/]
-# [Z]  X   C   V  [B] [N] [M] [<] [>] [?]
+# [z] [x] [c] [v] [b] [n] [m] [,] [.]
+# [Z]  X   C   V  [B] [N] [M] [<] [>]
 
-z      osd-msg-bar add chapter +1 ; show-text "${?chapter:Chapter: ${chapter}}"
-Z      osd-msg-bar add chapter -1 ; show-text "${?chapter:Chapter: ${chapter}}"
+z      script-binding betterchapters/chapterplaylist-next ; show-text "${?chapter:Chapter: ${chapter}}"
+Z      script-binding betterchapters/chapterplaylist-prev ; show-text "${?chapter:Chapter: ${chapter}}"
 
 x      script-message osc-chapterlist
 X      ignore
@@ -182,17 +190,11 @@ m      add audio-delay +0.10
 M      add audio-delay -0.10
 CTRL+m set sub-delay 0
 
-.      osd-msg-bar add chapter +1 ; show-text "${?chapter:Chapter: ${chapter}}"
-,      osd-msg-bar add chapter -1 ; show-text "${?chapter:Chapter: ${chapter}}"
+>      script-binding betterchapters/chapterplaylist-next ; show-text "${?chapter:Chapter: ${chapter}}"
+<      script-binding betterchapters/chapterplaylist-prev ; show-text "${?chapter:Chapter: ${chapter}}"
 
->      frame-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
-<      frame-back-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
-
-CTRL+< osd-msg playlist-next ; show-text "${playlist-pos-1}/${playlist-count}"
-CTRL+> osd-msg playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
-
-/      script-binding progressbar/toggle-inactive-bar
-?      script-binding repl/repl-enable
+.      frame-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
+,      frame-back-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
 
 
 
@@ -210,42 +212,37 @@ IDEOGRAPHIC_SPACE cycle pause
 TAB               cycle mute
 ENTER             show-progress
 
-BS     set speed 1.0 ; set gamma 0 ; set brightness 0 ; set contrast 0 ; set saturation 0 ; set hue 0 ; show-text "Speed/Gamma/Brightness/Contrast/Saturation/Hue resetted"
+BS                revert-seek
+SHIFT+BS          set speed 1.0 ; set gamma 0 ; set brightness 0 ; set contrast 0 ; set saturation 0 ; set hue 0 ; show-text "Speed/Gamma/Brightness/Contrast/Saturation/Hue resetted"
+ALT+BS            set video-pan-x 0 ; set video-pan-y 0 ; show-text "Pan resetted"
+META+BS           set video-zoom 0 ; show-text "Zoom resetted"
 
-F1     script-binding progressbar/toggle-inactive-bar
-F2     script-binding repl/repl-enable
+
+
+# [F1] [F2] F3 F4 F5 F6 F7 F8 F9 F10 F11 F12
+
+F1       script-binding repl/repl-enable
 
 
 
 # Numpad
 
-KP0      cycle-values video-rotate 90 180 270 0
-KP1      add video-zoom  -0.05
-KP2      add video-pan-y -0.01
-KP3      add video-zoom   0.05
-KP4      add video-pan-x  0.01
-KP5      set video-zoom 0 ; set video-pan-x 0 ; set video-pan-y 0 ; show-text "Reset zoom/pan"
-KP6      add video-pan-x -0.01
-KP7      add video-zoom  -0.05
-KP8      add video-pan-y  0.01
-KP9      add video-zoom   0.05
+KP0      ignore
+KP1      ignore
+KP2      ignore
+KP3      ignore
+KP4      ignore
+KP5      ignore
+KP6      ignore
+KP7      ignore
+KP8      ignore
+KP9      ignore
 KP_DEC   ignore
 KP_ENTER ignore
 
-CTRL+0   cycle-values video-rotate 90 180 270 0
-CTRL+1   add video-zoom  -0.05
-CTRL+2   add video-pan-y -0.01
-CTRL+3   add video-zoom   0.05
-CTRL+4   add video-pan-x  0.01
-CTRL+5   set video-zoom 0 ; set video-pan-x 0 ; set video-pan-y 0 ; show-text "Reset zoom/pan"
-CTRL+6   add video-pan-x -0.01
-CTRL+7   add video-zoom  -0.05
-CTRL+8   add video-pan-y  0.01
-CTRL+9   add video-zoom   0.05
 
 
-
-# Apple Remote section
+# Apple Remote
 
 AR_PLAY        cycle pause
 AR_PLAY_HOLD   quit
@@ -264,7 +261,7 @@ AR_VDOWN_HOLD  add chapter -1 ; show-text "${?chapter:Chapter: ${chapter}}"
 
 
 
-# Unused
+# Media Keys
 
 POWER       quit
 MENU        show-progress
@@ -280,11 +277,3 @@ VOLUME_UP   add volume +2 ; show-text "Volume: ${volume}"
 VOLUME_DOWN add volume -2 ; show-text "Volume: ${volume}"
 MUTE        cycle mute
 CLOSE_WIN   quit
-
-
-
-# Media Keys section
-
-#MK_PLAY ignore
-#MK_PREV ignore
-#MK_NEXT ignore
