--- a/mpv.conf
+++ b/mpv.conf
@@ -133,11 +133,11 @@ volume=100                              # default volume, 100 = unchanged
 tscale=oversample                      # [sharp] oversample <-> linear (triangle) <-> catmull_rom <-> mitchell <-> gaussian <-> bicubic [smooth]
 opengl-early-flush=no
 opengl-pbo=no                          # "yes" is currently bugged: https://github.com/mpv-player/mpv/issues/4988
-sigmoid-slope=10
+icc-profile-auto
 
 
 [high-quality]
-profile-desc=cond:is_desktop() and get('width', math.huge) < 3840 and (get('estimated-vf-fps', math.huge) < 58 or get('width', math.huge) < 900)
+profile-desc=cond:is_high(get('width', math.huge), get('height', math.huge), get('estimated-vf-fps', math.huge))
 # hanning with this radius is broken on OSX due to OpenGL driver bug
 #scale=ewa_hanning
 #scale-radius=3.2383154841662362
@@ -153,7 +153,7 @@ deband=yes
 hwdec=no
 
 [mid-quality]
-profile-desc=cond:(is_laptop() and (not on_battery() and get('width', math.huge) < 1920 and get('estimated-vf-fps', math.huge) < 58)) or (is_desktop() and (get('width', math.huge) >= 3840 or (get('estimated-vf-fps', math.huge) >= 58 and get('width', math.huge) >= 900)))
+profile-desc=cond:is_mid(get('width', math.huge), get('height', math.huge), get('estimated-vf-fps', math.huge))
 scale=spline36
 cscale=spline36
 dscale=mitchell
@@ -166,7 +166,7 @@ deband=yes
 hwdec=no
 
 [low-quality]
-profile-desc=cond:is_laptop() and (on_battery() or get('width', math.huge) >= 1920 or get('estimated-vf-fps', math.huge) >= 58)
+profile-desc=cond:is_low(get('width', math.huge), get('height', math.huge), get('estimated-vf-fps', math.huge))
 scale=bilinear
 cscale=bilinear
 dscale=bilinear
