--- a/input.conf
+++ b/input.conf
@@ -81,12 +81,13 @@ $      ignore
 &      ignore
 *      ignore
 
-CTRL+1 cycle-values glsl-shaders "~/.mpv/shaders/ravu-r3-rgb.hook" ""
-CTRL+2 cycle-values glsl-shaders "~/.mpv/shaders/nnedi3-nns32-win8x4.hook" ""
-CTRL+3 cycle-values glsl-shaders "~/.mpv/shaders/SSimSuperRes.glsl" ""
-CTRL+4 cycle-values glsl-shaders "~/.mpv/shaders/SSimDownscaler.glsl" ""
-CTRL+5 cycle-values glsl-shaders "~/.mpv/shaders/FineSharp.glsl" ""
-CTRL+6 cycle-values glsl-shaders "~/.mpv/shaders/adaptive-sharpen.glsl" ""
+CTRL+1 show-text "Shaders: ${glsl-shaders}"
+CTRL+2 change-list glsl-shaders append "~/.mpv/shaders/ravu-r3-rgb.hook"
+CTRL+3 change-list glsl-shaders append "~/.mpv/shaders/SSimSuperRes.glsl"
+CTRL+4 change-list glsl-shaders append "~/.mpv/shaders/SSimDownscaler.glsl"
+CTRL+5 change-list glsl-shaders append "~/.mpv/shaders/FineSharp.glsl"
+CTRL+6 change-list glsl-shaders append "~/.mpv/shaders/adaptive-sharpen.glsl"
+CTRL+0 set glsl-shaders ""
 
 
 
@@ -111,7 +112,7 @@ T      cycle-values stretch-dvd-subs "yes" "no"
 y      ignore
 Y      ignore
 
-u      ignore
+u      cycle-values hwdec "auto" "no"
 U      ignore
 
 i      script-binding stats/display-stats
@@ -119,7 +120,7 @@ I      script-binding stats/display-stats-toggle
 o      cycle-values osd-level 3 1
 O      ignore
 p      cycle-values video-rotate 90 180 270 0
-P      cycle-values video-aspect "16:9" "4:3" "2.35:1" "-1"
+P      cycle-values video-aspect "16:9" "4:3" "2.35:1" "16:10"
 
 [     ignore
 ]     ignore
@@ -133,6 +134,8 @@ P      cycle-values video-aspect "16:9" "4:3" "2.35:1" "-1"
 
 a      cycle audio                                                     # switch audio streams
 A      cycle-values af "lavfi=[dynaudnorm=f=200:g=5:r=0.1]" ""         # dynamic range compression
+CTRL+a script-binding auto_audio_device/toggle-auto-audio-device       # toggle automatic audio device switching
+ALT+a  script-binding auto_audio_device/set-auto-audio-device
 
 s      cycle sub                                                       # cycle through subtitles
 S      cycle sub-visibility
