--- a/mpv.conf
+++ b/mpv.conf
@@ -31,7 +31,7 @@ hls-bitrate=max                         # use max quality for HLS streams
 
 [ytdl-desktop]
 profile-desc=cond:is_desktop()
-ytdl-format=bestvideo[height<=?1080]+bestaudio/best
+ytdl-format=bestvideo[height<=?2160]+bestaudio/best
 
 [ytdl-laptop]
 profile-desc=cond:is_laptop()
@@ -50,7 +50,7 @@ ytdl-format=bestvideo[height<=?1080][fps<=?30][vcodec!=?vp9][protocol!=http_dash
 cache=yes
 cache-default=4000000                   # size in KB
 cache-backbuffer=250000                 # size in KB
-demuxer-max-bytes=1147483647            # ~1 GiB in bytes
+demuxer-max-bytes=114748364             # ~100 MiB in bytes
 
 
 #############
@@ -134,10 +134,12 @@ tscale=oversample                      # [sharp] oversample <-> linear (triangle
 opengl-early-flush=no
 opengl-pbo=no                          # "yes" is currently bugged: https://github.com/mpv-player/mpv/issues/4988
 icc-profile-auto
+icc-contrast=1000                      # silence some warning because the profile is bad
+hwdec=no
 
 
 [high-quality]
-profile-desc=cond:is_high(get('width', math.huge), get('height', math.huge), get('estimated-vf-fps', math.huge))
+profile-desc=cond:is_high(get('width', 0), get('height', 0), get('estimated-vf-fps', 0))
 # hanning with this radius is broken on OSX due to OpenGL driver bug
 #scale=ewa_hanning
 #scale-radius=3.2383154841662362
@@ -150,10 +152,13 @@ dither-depth=auto
 correct-downscaling=yes
 sigmoid-upscaling=yes
 deband=yes
-hwdec=no
+glsl-shaders-append="~/.mpv/shaders/ravu-r3-rgb.hook"
+glsl-shaders-append="~/.mpv/shaders/ravu-r3-rgb.hook"
+glsl-shaders-append="~/.mpv/shaders/ravu-r3-rgb.hook"
+
 
 [mid-quality]
-profile-desc=cond:is_mid(get('width', math.huge), get('height', math.huge), get('estimated-vf-fps', math.huge))
+profile-desc=cond:is_mid(get('width', 0), get('height', 0), get('estimated-vf-fps', 0))
 scale=spline36
 cscale=spline36
 dscale=mitchell
@@ -163,10 +168,10 @@ dither-depth=auto
 correct-downscaling=yes
 sigmoid-upscaling=yes
 deband=yes
-hwdec=no
+glsl-shaders-set=""
 
 [low-quality]
-profile-desc=cond:is_low(get('width', math.huge), get('height', math.huge), get('estimated-vf-fps', math.huge))
+profile-desc=cond:is_low(get('width', 0), get('height', 0), get('estimated-vf-fps', 0))
 scale=bilinear
 cscale=bilinear
 dscale=bilinear
@@ -176,17 +181,16 @@ dither-depth=no
 correct-downscaling=no
 sigmoid-upscaling=no
 deband=no
-hwdec=no
+glsl-shaders-set=""
 
-[4K]
+[4K-lavc-threads]
 profile-desc=cond:get('width', -math.huge) >= 3840
 vd-lavc-threads=32
 
-[4K-inverted]
+[4K-lavc-threads-inverted]
 profile-desc=cond:get('width', math.huge) < 3840
 vd-lavc-threads=0
 
-[default]
 
 
 ###################################
