--- a/input.conf
+++ b/input.conf
@@ -171,8 +171,8 @@ CTRL+l ab-loop
 # [z] [x] [c] [v] [b] [n] [m] [,] [.]
 # [Z]  X   C   V  [B] [N] [M] [<] [>]
 
-z      script-binding betterchapters/chapterplaylist-next ; show-text "${?chapter:Chapter: ${chapter}}"
-Z      script-binding betterchapters/chapterplaylist-prev ; show-text "${?chapter:Chapter: ${chapter}}"
+z      script-binding betterchapters/chapterplaylist-next #; show-text "${?chapter:Chapter: ${chapter}}"
+Z      script-binding betterchapters/chapterplaylist-prev #; show-text "${?chapter:Chapter: ${chapter}}"
 
 x      script-message osc-chapterlist
 X      ignore
@@ -193,8 +193,8 @@ m      add audio-delay +0.10
 M      add audio-delay -0.10
 CTRL+m set sub-delay 0
 
->      script-binding betterchapters/chapterplaylist-next ; show-text "${?chapter:Chapter: ${chapter}}"
-<      script-binding betterchapters/chapterplaylist-prev ; show-text "${?chapter:Chapter: ${chapter}}"
+>      script-binding betterchapters/chapterplaylist-next #; show-text "${?chapter:Chapter: ${chapter}}"
+<      script-binding betterchapters/chapterplaylist-prev #; show-text "${?chapter:Chapter: ${chapter}}"
 
 .      frame-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
 ,      frame-back-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
